[gd_scene load_steps=16 format=3 uid="uid://d3i0h87p05m3a"]

[ext_resource type="Script" uid="uid://bnshlaqjs8anv" path="res://objects/boss_touhou/dialogue/balloon.gd" id="1_36de5"]
[ext_resource type="AudioStream" uid="uid://omormt6rns3v" path="res://objects/boss_touhou/dialogue/se_plst00.wav" id="2_4sdlf"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_a8ve6"]
[ext_resource type="FontFile" uid="uid://dam7p4rtnpfd7" path="res://addons/localization/special_fonts/ComixHeavy_Telexified+Cyr.otf" id="2_fdhoq"]
[ext_resource type="Script" uid="uid://bb52rsfwhkxbn" path="res://addons/dialogue_manager/dialogue_responses_menu.gd" id="3_72ixx"]
[ext_resource type="FontVariation" uid="uid://u83p423iwekg" path="res://addons/localization/special_fonts/misterearlbt_variation.tres" id="4_4sdlf"]
[ext_resource type="Script" uid="uid://c0xlh6o06spwa" path="res://engine/objects/signs/sign_help_key_formatter.gd" id="7_clxbd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spyqn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.329412, 0.329412, 0.329412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ri4m3"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0njw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qkmqt"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_fdhoq"]
default_font_size = 20
Button/styles/disabled = SubResource("StyleBoxFlat_spyqn")
Button/styles/focus = SubResource("StyleBoxFlat_ri4m3")
Button/styles/hover = SubResource("StyleBoxFlat_e0njw")
Button/styles/normal = SubResource("StyleBoxFlat_e0njw")
MarginContainer/constants/margin_bottom = 15
MarginContainer/constants/margin_left = 30
MarginContainer/constants/margin_right = 30
MarginContainer/constants/margin_top = 15
PanelContainer/styles/panel = SubResource("StyleBoxFlat_qkmqt")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fdhoq"]

[sub_resource type="Gradient" id="Gradient_fdhoq"]
offsets = PackedFloat32Array(0.5, 1)
colors = PackedColorArray(0, 0, 0, 0.776471, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4sdlf"]
gradient = SubResource("Gradient_fdhoq")

[node name="TouhouBalloon" type="CanvasLayer"]
layer = 100
script = ExtResource("1_36de5")
dialogue_action_sound = ExtResource("2_4sdlf")

[node name="Balloon" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fdhoq")

[node name="MarginContainer" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -212.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="Balloon/MarginContainer"]
clip_children = 2
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_fdhoq")

[node name="MarginContainer" type="MarginContainer" parent="Balloon/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("2_fdhoq")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" parent="Balloon/MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_a8ve6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/line_separation = -6
theme_override_fonts/normal_font = ExtResource("4_4sdlf")
theme_override_font_sizes/normal_font_size = 37
text = "Dialogue...
Dialogue..."
skip_pause_at_abbreviations = PackedStringArray("Mr", "Mrs", "Ms", "Dr", "etc", "eg", "ex", "...")

[node name="ResponsesMenu" type="VBoxContainer" parent="Balloon" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.5
offset_top = -35.0
offset_right = 290.5
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_constants/separation = 2
alignment = 1
script = ExtResource("3_72ixx")
response_template = NodePath("ResponseExample")

[node name="ResponseExample" type="Button" parent="Balloon/ResponsesMenu"]
visible = false
layout_mode = 2
text = "Response example"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(319.294, 372.825)
rotation = 1.5708
scale = Vector2(1e-05, 8.478)
texture = SubResource("GradientTexture2D_4sdlf")

[node name="Label" type="Label" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -174.0
offset_right = -50.0
offset_bottom = -141.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.607843)
theme_override_fonts/font = ExtResource("4_4sdlf")
theme_override_font_sizes/font_size = 30
text = "Press the %s to skip."
horizontal_alignment = 1
script = ExtResource("7_clxbd")
action = "m_extra"

[node name="RemiTitle" type="RichTextLabel" parent="."]
offset_top = 250.0
offset_right = 640.0
offset_bottom = 314.0
theme_override_colors/font_outline_color = Color(0, 0, 0.352941, 1)
theme_override_constants/outline_size = 11
theme_override_constants/line_separation = -6
theme_override_fonts/normal_font = ExtResource("4_4sdlf")
theme_override_font_sizes/normal_font_size = 39
bbcode_enabled = true
text = "							[color=FF6699]The Eternally Young Scarlet Moon[/color]
							Remilia Scarlet"
shortcut_keys_enabled = false
horizontal_alignment = 1

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="response_selected" from="Balloon/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
